package com.hqbhoho.bigdata.design.pattern.abstract_factory;

public interface Computer {
    void code();
}
