package com.hqbhoho.bigdata.design.pattern.abstract_factory;

public interface Phone {
    void call();
    void specialAction();
}
